fixed content spacing issues

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -92,6 +92,10 @@ header button:hover{
     padding-right: 15px;
 }
 
+.profile-signout-box span:hover {
+    color: var(--Pastel-Pink);
+}
+
 .profile-signout-box img{
     width: 50px;
     height: 50px;
